--- a/src/resources/views/search.hbs
+++ b/src/resources/views/search.hbs
@@ -1,10 +1,10 @@
 <div class="form-search mt-5">
-    <form method="POST" action="/search-post">
+    <form method="POST" action="">
         <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Từ khóa</label>
-            <input type="text" class="form-control" id="keyword" name="keyword" placeholder="Nhập từ khóa tìm kiếm">
+            <label for="keyword" class="form-label">Từ khóa</label>
+            <input name="q" type="text" class="form-control" id="keyword" placeholder="Nhập từ khóa tìm kiếm">
         </div>
         <button type="submit" class="btn btn-primary">Tìm kiếm</button>
     </form>
 </div>
-<h3>{{obj.keyword}}</h3>
+<h3>{{obj.q}}</h3>
