--- a/src/resources/views/search.hbs
+++ b/src/resources/views/search.hbs
@@ -7,4 +7,4 @@
         <button type="submit" class="btn btn-primary">Tìm kiếm</button>
     </form>
 </div>
-<h3>{{obj.q}}</h3>
+<h3>{{result}}</h3>
