--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -3,3 +3,20 @@
 .container {
     margin-top: 20px;
 }
+
+.place {
+    .card {
+        width: 100%;
+        padding: 10px;
+        .card-img-top {
+            height: 150px;
+            object-fit: cover;
+        }
+    }
+}
+
+.blog-single {
+    img {
+        width: 100%;
+    }
+}
