--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -20,3 +20,14 @@
         width: 100%;
     }
 }
+
+.avatar-img {
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+}
+
+.table-img {
+    width: 35px;
+    height: 35px;
+}
