--- a/src/resources/views/me/my-place-list.hbs
+++ b/src/resources/views/me/my-place-list.hbs
@@ -17,7 +17,10 @@
     <tr>
       <th scope="col" >#</th>
       <th scope="col">Ảnh đại diện</th>
-      <th scope="col">Tên địa điểm</th>
+      <th scope="col">
+        Tên địa điểm
+        {{{sortable 'name' _sort.type}}}
+      </th>
       <th scope="col">Ngày tạo</th>
       <th scope="col">Thao tác</th>
     </tr>
